--- a/RentalService/app/src/main/res/layout/admin_activity_join.xml
+++ b/RentalService/app/src/main/res/layout/admin_activity_join.xml
@@ -3,12 +3,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="300dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="10dp"
+    android:background="@color/white"
     tools:context=".activity.JoinActivity">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/purple_700"
+        android:text="가입하기"
+        android:textSize="25dp"
+        android:gravity="center"
+        android:textColor="@color/white"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,20 +26,27 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical"
             android:text="ID: "
             android:textSize="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
             />
         <EditText
             android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
             android:inputType="text"
+            android:textSize="20dp"
             android:id="@+id/join_id"
             />
         <Button
+            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="중복 확인"
-            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:id="@+id/join_id_check"
             />
     </LinearLayout>
@@ -44,12 +60,17 @@
             android:layout_height="wrap_content"
             android:text="Password: "
             android:textSize="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
             />
         <EditText
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:id="@+id/join_password"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:textSize="20dp"
             />
     </LinearLayout>
 
@@ -62,12 +83,17 @@
             android:layout_height="wrap_content"
             android:text="이름: "
             android:textSize="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
             />
         <EditText
-            android:layout_width="100dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:id="@+id/join_name"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:textSize="20dp"
             />
     </LinearLayout>
 
@@ -80,12 +106,17 @@
             android:layout_height="wrap_content"
             android:text="전화번호: "
             android:textSize="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
             />
         <EditText
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:id="@+id/join_number"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:textSize="20dp"
             />
     </LinearLayout>
 
@@ -96,23 +127,30 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="공무원 인증 코드: "
+            android:text="인증 코드: "
             android:textSize="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
             />
         <EditText
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:textSize="20dp"
             android:id="@+id/join_check_code"
             />
     </LinearLayout>
 
     <Button
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="가입하기"
         android:layout_gravity="center"
         android:id="@+id/join_btn"
+        android:layout_marginBottom="10dp"
         />
 
 </LinearLayout>
