--- a/RentalService/app/src/main/res/layout/admin_activity_login.xml
+++ b/RentalService/app/src/main/res/layout/admin_activity_login.xml
@@ -15,7 +15,7 @@
         android:hint="ID"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="200dp"
         />
 
     <EditText
@@ -30,14 +30,14 @@
         />
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:gravity="center"
         android:orientation="horizontal">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="로그인"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="30dp"
             android:layout_gravity="center"
             android:id="@+id/login_button"
             />
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="가입하기"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="30dp"
             android:layout_gravity="center"
             android:id="@+id/join_button"
             android:layout_marginLeft="20dp"
