--- a/RentalService/app/src/main/res/layout/activity_splash.xml
+++ b/RentalService/app/src/main/res/layout/activity_splash.xml
@@ -16,11 +16,10 @@
 
     <ImageView
         android:id="@+id/splash_gif"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_gravity="bottom|right"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="match_parent"
+
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
          />
 
 </FrameLayout>
