--- a/RentalService/app/src/main/res/layout/user_fragment_rental_info.xml
+++ b/RentalService/app/src/main/res/layout/user_fragment_rental_info.xml
@@ -3,20 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/user_fragment_rental_info"
     tools:context="fragment.UserRentalFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <SearchView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:queryHint="전화번호를 입력 후 검색 버튼을 눌러주세요!"
-            android:id="@+id/user_rental_detail_search_bar"
-            android:iconifiedByDefault="false"
-            />
 
         <ListView
             android:layout_marginTop="5dp"
@@ -26,5 +20,8 @@
             />
 
     </LinearLayout>
+
+
+
 
 </FrameLayout>
