--- a/RentalService/app/src/main/res/layout/user_fragment_rental_info_0.xml
+++ b/RentalService/app/src/main/res/layout/user_fragment_rental_info_0.xml
@@ -3,11 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:id="@+id/user_fragment_rental_info_0"
     android:orientation="vertical">
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:scaleType="centerCrop"
         android:src="@drawable/list"></ImageView>
     <TextView
