--- a/RentalService/app/src/main/res/layout/admin_activity_join.xml
+++ b/RentalService/app/src/main/res/layout/admin_activity_join.xml
@@ -135,7 +135,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:textSize="20dp"
