--- a/RentalService/app/src/main/res/layout/user_fragment_rental_info_0.xml
+++ b/RentalService/app/src/main/res/layout/user_fragment_rental_info_0.xml
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="신청하기"
+            android:text="검색하기"
             android:id="@+id/user_rental_apply_button"
             />
     </LinearLayout>
